# synctools

./: .gitignore  .justfile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  synctools.wpr  synctools.wpu  url_capture.py
src/synctools/: __init__.py  file_path.py  sync_diff.py  sync_dirs.py  sync_from  sync_from.py  sync_to  sync_to.py
tests/: README.md  conftest.py  test_cli.py  test_commands.py  test_file_path.py  test_sync_diff.py  test_sync_dirs.py
