[project]
name = "synctools"
version = "0.4.0b2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steve Holden", email = "steve@holdenweb.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sync_to = "synctools:sync_to"
sync_from = "synctools:sync_from"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

