[project]
name = "synctools"
version = "0.5.0b1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steve Holden", email = "steve@holdenweb.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sync_to = "synctools:sync_to"
sync_from = "synctools:sync_from"
sync_diff = "synctools:sync_diff"
[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]

